--- a/styles/style.css
+++ b/styles/style.css
@@ -144,7 +144,7 @@ body{
         width: 50%;
     }
 }
-@media (max-height: 1000px) {
+@media (min-height: 1200px) and (max-width: 800px) {
     .rodape {
         position: fixed;
         left: 0;
