--- a/styles/s2.css
+++ b/styles/s2.css
@@ -36,82 +36,21 @@ body{
     text-decoration: none;
 }
 
-.apresentacao{
-    padding: 2% 8%;
-    margin: 10px solid black;
-}
-.apresentacao__conteudo{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 0;
-}
-.apresentacao__conteudo__contato {
-    width: 35%;  
-    padding: 3% 0 0 0;  
+  body {
+    line-height: 1.8;
+    color: #f5f6f7;
+  }
+  .margin {margin-bottom: 45px;}
+  .bg-1 { 
     background-color: var(--cor-terciaria);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.apresentacao__conteudo__contato__foto {
-    border-radius: 50%;
-    width: 30%;
-}
-.apresentacao__conteudo__contato__info {
-    padding: 8% 0 0 0;
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
-    align-items: center;
-    font-size: 18px;    
-}
-.apresentacao__conteudo__contato__info__space {
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    gap: 0.7rem;
-    
-}
-.apresentacao__conteudo__contato__info__space a{
-    text-decoration: none;
-}
-.apresentacao__conteudo__titulo{
-    font-size: 1.5rem;
-    font-family: var(--fonte-secundaria);
-}
-
-
-.apresentacao__conteudo__referencias {
-    width: 65%;  
-    padding: 3% 0 0 1%;  
-    display: flex;
-    flex-direction: column;   
-    background-color: white;
-    gap: 3.75rem;
-}
-.apresentacao__conteudo__referencias__nome {
-    font-size: 2.50rem;
-    font-family: var(--fonte-primaria);
-    font-weight: bold;
-    color: #03989f;
-}
-.apresentacao__conteudo__referencias__titulo {
-    font-size: 1.8rem;
-    font-family: var(--fonte-secundaria);
-    color: #03989f;
-    font-weight: 700;
-    display: flex;
-    flex-direction: column;
-    gap: 1.56rem;
-}
-.apresentacao__conteudo__referencias__texto {
-    color: black;
-    font-size: 1.25rem;
-    font-weight: 500;
-    width: 50%;
-}
+  }
+  .bg-2 { 
+    background-color: #474e5d;
+  }
+  .container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
 
 .rodape{
     padding-top: 0.5rem;
@@ -129,6 +68,13 @@ body{
     height: 100%;
     display: flex;
     align-items: center;
+}
+.tt1 {
+    display: block;
+}
+.img1 {
+    width: 50%;
+    height: auto;
 }
 @media (max-width: 900px) {
     .apresentacao__conteudo{
